<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_title_text"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                            android:id="@+id/title_desc_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/feedback_title_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/address_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_address_title_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/address_desc_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_address_desc_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/enquiries_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_enquiries_title_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/enquiries_desc_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_enquiries_desc_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/careers_title_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_carrers_title_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/careers_desc_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_careers_desc_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/reference_title_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_reference_title_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/reference_desc_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_reference_desc_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/transcript_title_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_transcript_title_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/transcript_desc_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_transcript_desc_text"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>